// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render TodoList component correctly 1`] = `
<DocumentFragment>
  <div>
    <div>
      Todo Item Component
    </div>
    <div>
      Todo Item Component
    </div>
    <div>
      Todo Item Component
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render TodoList component correctly with empty list 1`] = `
<DocumentFragment>
  <div>
    <div>
      Nothing ToDo
    </div>
  </div>
</DocumentFragment>
`;
